# SpreadsheetExplorer

./: .gitignore  .pylintrc  README.md  build.sh  main.py  pyproject.toml
.run/: main.run.xml
controller/: controller.py  feature_controller.py  workbook_controller.py
diagrams/plantuml/: dependency_tree_final_output_nodes.puml  dependency_tree_heatmap.puml  dependency_tree_precedent-dependent.puml  export_plantuml.py
diagrams/plantuml/architecture/: MVC_architecture.puml  class_diagram_core-services_adapters.puml  deployment.puml  (+9 more)
documentation/: UC_diagram.plantuml
model/: app_state.py
model/models/: i_connected_workbook.py  workbook_click_watcher.py
model/services/: active_workbook_service.py  connected_workbook_service.py
model/settings/: colour_scheme.py
model/utils/: colour_utils.py  observable_value.py  utils.py
spreadsheet_api/: base.py  xlwings_adapter.py
spreadsheet_engine/: core.py
src/: bootstrap.py  main.py
src/controller/: feature_controller.py  workbook_controller.py
src/model/: app_state.py
src/view/: context_info_table.py  function_buttons.py  function_buttons_section.py  main_view.py  main_window.py  output_section.py  workbook_selector.py
test/controller/: controller_test.py
test/utils/: test_utils.py
tests/: conftest.py
tests/controller/: controller_test.py  feature_controller_test.py  workbook_controller_test.py
tests/model/: test_cell_address_parsing.py
tests/utils/: test_utils.py
ui/: main_window.py
view/: function_buttons.py  main_view.py  main_window.py  output_section.py  workbook_selector.py
(+125 files in other folders)
