[project]
name = "excel_tk_app"
version = "0.1.0"
description = "A Tkinter + xlwings desktop app to read Excel files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff==0.11.5",
    "xlwings==0.33.11",
    "formulas==1.2.9",
    "openpyxl==3.1.5",
    "graphviz==0.20.3",
    "docutils==0.21.2",
    "pytest==8.3.5",
    "webcolors==24.11.1"
]