[project]
name = "excel_tk_app"
version = "0.1.0"
description = "A Tkinter + xlwings desktop app to read Excel files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docutils==0.21.2",
    "graphviz==0.20.3",
    "networkx==3.4.2",
    "openpyxl==3.1.5",
    "pylint==3.3.7",
    "pytest==8.3.5",
    "ruff==0.11.10",
    "webcolors==24.11.1",
    "xlwings==0.33.14",
]